welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value vair
vair i = 0
^Variables:5: error: not found: value i
	i = i+1
        ^Variables:8: error: not found: value i
while (i>0) {
       ^Variables:10: error: not found: value i
	i= i-1
        ^